--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -388,12 +388,12 @@ body.menu-open {
 }
 
 
-.turn-entry {
-    touch-action: none; /* prevent mobile scroll conflict when dragging */
-  }
-
-
-
+.placeholder {
+  background: rgba(255, 255, 255, 0.15);
+  border: 2px dashed var(--primary-color);
+  margin: 5px 0;
+  border-radius: 8px;
+}
 
   .dragging-active {
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
@@ -449,7 +449,7 @@ body.menu-open {
   <div class="footer">
     <a href="#" id="homeButton" class="footer-icon active" aria-label="Home">
         <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-        <span>Home 111 </span>
+        <span>Home 666 </span>
     </a>
     <a href="#" id="profileButton" class="footer-icon" aria-label="Profile">
         <img src="/BeeMazing-Y1/mobile/1-Home/ProfileBtn.png" alt="Profile" />
@@ -890,15 +890,15 @@ async function loadTasks() {
 
 function enableDragAndDrop(taskDiv) {
   let draggedItem = null;
-  let startY = 0;
   let container = null;
+  let placeholder = null;
+  let startY = 0;
+  let scrollInterval = null;
 
   const turnEntries = taskDiv.querySelectorAll(".turn-entry");
-
   turnEntries.forEach(entry => {
-    entry.draggable = false; // disable native dragging
-    entry.style.userSelect = "none"; // prevent text selection on touch
-    entry.style.touchAction = "none"; // prevent scrolling while dragging
+    entry.draggable = false; 
+    entry.style.userSelect = "none";
     container = entry.parentNode;
 
     entry.addEventListener("mousedown", startDrag);
@@ -906,74 +906,95 @@ function enableDragAndDrop(taskDiv) {
   });
 
   function startDrag(e) {
-  e.preventDefault();
-  draggedItem = e.currentTarget;
-  startY = e.touches ? e.touches[0].clientY : e.clientY;
-  draggedItem.classList.add("dragging-active"); // CHANGE to dragging-active
+    e.preventDefault();
+    draggedItem = e.currentTarget;
+    startY = e.touches ? e.touches[0].clientY : e.clientY;
 
-  document.addEventListener("mousemove", onDrag);
-  document.addEventListener("touchmove", onDrag, { passive: false });
-  document.addEventListener("mouseup", endDrag);
-  document.addEventListener("touchend", endDrag);
-}
+    draggedItem.classList.add("dragging");
+    placeholder = document.createElement("div");
+    placeholder.className = "turn-entry placeholder";
+    placeholder.style.height = `${draggedItem.offsetHeight}px`;
+    container.insertBefore(placeholder, draggedItem.nextSibling);
 
+    document.addEventListener("mousemove", onDrag);
+    document.addEventListener("touchmove", onDrag, { passive: false });
+    document.addEventListener("mouseup", endDrag);
+    document.addEventListener("touchend", endDrag);
 
+    startAutoScroll();
+  }
 
   function onDrag(e) {
-  if (!draggedItem) return;
+    if (!draggedItem) return;
+    const y = e.touches ? e.touches[0].clientY : e.clientY;
+    const moveY = y - startY;
+    draggedItem.style.transform = `translateY(${moveY}px)`;
+    draggedItem.style.zIndex = "1000";
+    draggedItem.style.position = "relative";
 
-  const y = e.touches ? e.touches[0].clientY : e.clientY;
-  const moveY = y - startY;
-  draggedItem.style.transform = `translateY(${moveY}px)`;
-  draggedItem.style.zIndex = "999";
-  draggedItem.style.position = "relative";
-
-  const entries = Array.from(container.children);
-  for (const entry of entries) {
-    if (entry === draggedItem) continue;
-    const rect = entry.getBoundingClientRect();
-    const draggedRect = draggedItem.getBoundingClientRect();
-    const middle = rect.top + rect.height / 2;
-
-    if (y > rect.top && y < rect.bottom) {
-      if (draggedRect.top < middle) {
-        container.insertBefore(draggedItem, entry);
-      } else {
-        container.insertBefore(draggedItem, entry.nextSibling);
+    const entries = Array.from(container.children).filter(el => el !== draggedItem && el !== placeholder);
+    for (const entry of entries) {
+      const rect = entry.getBoundingClientRect();
+      if (y > rect.top && y < rect.bottom) {
+        if (y < rect.top + rect.height / 2) {
+          container.insertBefore(placeholder, entry);
+        } else {
+          container.insertBefore(placeholder, entry.nextSibling);
+        }
       }
+    }
+  }
 
-      // 🛠️ FIX: After reorder, reset startY based on new position
-      const newRect = draggedItem.getBoundingClientRect();
-      startY = (e.touches ? e.touches[0].clientY : e.clientY) - (newRect.top + newRect.height / 2);
-      break; // important to prevent multiple moves
+  function endDrag() {
+    if (!draggedItem) return;
+
+    container.insertBefore(draggedItem, placeholder);
+    draggedItem.classList.remove("dragging");
+    draggedItem.style.transform = "";
+    draggedItem.style.zIndex = "";
+    draggedItem.style.position = "";
+
+    if (placeholder) {
+      placeholder.remove();
+      placeholder = null;
+    }
+
+    draggedItem = null;
+
+    document.removeEventListener("mousemove", onDrag);
+    document.removeEventListener("touchmove", onDrag);
+    document.removeEventListener("mouseup", endDrag);
+    document.removeEventListener("touchend", endDrag);
+
+    stopAutoScroll();
+
+    const newOrder = Array.from(container.children).map(el => el.dataset.user);
+    const title = taskDiv.dataset.title;
+    const date = taskDiv.dataset.date;
+    handleReorder(title, date, newOrder);
+  }
+
+  function startAutoScroll() {
+    scrollInterval = setInterval(() => {
+      const y = (window.TouchEvent && event instanceof TouchEvent) ? event.touches[0].clientY : event.clientY;
+      const windowHeight = window.innerHeight;
+      const scrollSpeed = 10;
+
+      if (y < 100) {
+        window.scrollBy(0, -scrollSpeed);
+      } else if (y > windowHeight - 100) {
+        window.scrollBy(0, scrollSpeed);
+      }
+    }, 20);
+  }
+
+  function stopAutoScroll() {
+    if (scrollInterval) {
+      clearInterval(scrollInterval);
+      scrollInterval = null;
     }
   }
 }
-
-
-function endDrag() {
-  if (!draggedItem) return;
-
-  draggedItem.classList.remove("dragging-active"); // CHANGE to dragging-active
-  draggedItem.style.transform = "";
-  draggedItem.style.position = "";
-  draggedItem.style.zIndex = "";
-  draggedItem = null;
-
-  document.removeEventListener("mousemove", onDrag);
-  document.removeEventListener("touchmove", onDrag);
-  document.removeEventListener("mouseup", endDrag);
-  document.removeEventListener("touchend", endDrag);
-
-  const newOrder = Array.from(container.children).map(el => el.dataset.user);
-  const title = taskDiv.dataset.title;
-  const date = taskDiv.dataset.date;
-  handleReorder(title, date, newOrder);
-}
-
-
-}
-
 
 
 
