--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -449,7 +449,7 @@ body.menu-open {
   <div class="footer">
     <a href="#" id="homeButton" class="footer-icon active" aria-label="Home">
         <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-        <span>Home 1 </span>
+        <span>Home</span>
     </a>
     <a href="#" id="profileButton" class="footer-icon" aria-label="Profile">
         <img src="/BeeMazing-Y1/mobile/1-Home/ProfileBtn.png" alt="Profile" />
@@ -887,17 +887,15 @@ async function loadTasks() {
 
 
 
-
 function enableDragAndDrop(taskDiv) {
   let draggedItem = null;
-  let startY = 0;
-  let offsetY = 0;
   let container = null;
+  let placeholder = null;
 
   const turnEntries = taskDiv.querySelectorAll(".turn-entry");
 
   turnEntries.forEach(entry => {
-    entry.draggable = false; 
+    entry.draggable = false;
     entry.style.userSelect = "none";
     container = entry.parentNode;
 
@@ -908,20 +906,18 @@ function enableDragAndDrop(taskDiv) {
   function startDrag(e) {
     e.preventDefault();
     draggedItem = e.currentTarget;
+    container = draggedItem.parentNode;
 
-    const touchY = e.touches ? e.touches[0].clientY : e.clientY;
-    const rect = draggedItem.getBoundingClientRect();
-    offsetY = touchY - rect.top;
-    startY = touchY;
+    placeholder = document.createElement("div");
+    placeholder.className = "turn-entry";
+    placeholder.style.height = `${draggedItem.offsetHeight}px`;
+    placeholder.style.background = "rgba(255, 255, 255, 0.1)";
+    placeholder.style.border = "2px dashed var(--primary-color)";
+    placeholder.style.borderRadius = "8px";
 
-    draggedItem.style.position = "absolute";
-    draggedItem.style.width = `${rect.width}px`;
-    draggedItem.style.left = `${rect.left}px`;
-    draggedItem.style.top = `${touchY - offsetY}px`;
-    draggedItem.style.zIndex = 1000;
-    draggedItem.style.pointerEvents = "none"; // so it doesn't block other elements
+    draggedItem.parentNode.insertBefore(placeholder, draggedItem.nextSibling);
 
-    document.body.appendChild(draggedItem);
+    draggedItem.classList.add("dragging-active");
 
     document.addEventListener("mousemove", onDrag);
     document.addEventListener("touchmove", onDrag, { passive: false });
@@ -931,17 +927,26 @@ function enableDragAndDrop(taskDiv) {
 
   function onDrag(e) {
     if (!draggedItem) return;
-    const touchY = e.touches ? e.touches[0].clientY : e.clientY;
-    draggedItem.style.top = `${touchY - offsetY}px`;
 
-    const entries = Array.from(container.children);
+    const y = e.touches ? e.touches[0].clientY : e.clientY;
+    draggedItem.style.position = "absolute";
+    draggedItem.style.zIndex = "1000";
+    draggedItem.style.pointerEvents = "none";
+    draggedItem.style.width = `${placeholder.offsetWidth}px`;
+    draggedItem.style.left = `${placeholder.getBoundingClientRect().left}px`;
+    draggedItem.style.top = `${y - placeholder.offsetHeight / 2}px`;
+
+    const entries = Array.from(container.children).filter(el => el !== draggedItem && el !== placeholder);
+
     for (const entry of entries) {
       const rect = entry.getBoundingClientRect();
-      if (touchY > rect.top && touchY < rect.bottom) {
-        if (entry !== draggedItem) {
-          container.insertBefore(draggedItem, touchY < rect.top + rect.height / 2 ? entry : entry.nextSibling);
-        }
+      const middleY = rect.top + rect.height / 2;
+
+      if (y < middleY) {
+        container.insertBefore(placeholder, entry);
         break;
+      } else if (entry === entries[entries.length - 1]) {
+        container.appendChild(placeholder);
       }
     }
   }
@@ -949,15 +954,18 @@ function enableDragAndDrop(taskDiv) {
   function endDrag() {
     if (!draggedItem) return;
 
+    draggedItem.classList.remove("dragging-active");
+
     draggedItem.style.position = "";
-    draggedItem.style.width = "";
-    draggedItem.style.left = "";
     draggedItem.style.top = "";
+    draggedItem.style.left = "";
     draggedItem.style.zIndex = "";
     draggedItem.style.pointerEvents = "";
+    draggedItem.style.width = "";
 
-    container.appendChild(draggedItem);
-
+    container.insertBefore(draggedItem, placeholder);
+    placeholder.remove();
+    placeholder = null;
     draggedItem = null;
 
     document.removeEventListener("mousemove", onDrag);
