--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -805,64 +805,86 @@ async function loadTasks() {
 
     Object.keys(tasksByTitle).forEach(title => {
       const task = tasksByTitle[title];
-      const rotation = calculateTurn(task, selectedDate);   // ✅ Get Current Turn, Next, Completed
-      const turns = prepareTaskTurnData(task, selectedDate); // ✅ Get full turn list
       const date = task.date;
-
       const div = document.createElement("div");
       div.className = "task-entry";
       div.dataset.title = title;
       div.dataset.date = date;
 
-      div.innerHTML = `
+      let contentHTML = `
         <h3 class="task-title">${title}</h3>
         <div class="task-meta">
-          <p><strong>Current Turn:</strong> ${rotation.currentTurn}</p>
-          <p><strong>Next:</strong> ${rotation.nextUser}</p>
-          <p><strong>Completed:</strong> ${rotation.completedCount}/${rotation.repeatLimit}</p>
+          <p><strong>Settings:</strong> ${task.settings}</p>
         </div>
         <div class="task-details${expandedTasks.has(title) ? ' show' : ''}">
-          ${
-            turns.length
-              ? turns.map((turn, index) => `
-                <div class="turn-entry" data-index="${index}" data-user="${turn.user}">
-                  <p>Turn ${turn.repetition}: ${turn.user} - ${
-                    turn.isCompleted
-                      ? 'Accepted'
-                      : turn.isPending
-                        ? 'Waiting for Review'
-                        : 'Pending'
-                  }</p>
-                  ${
-                    turn.isPending && !turn.isCompleted
-                      ? `
-                        <button class="accept-btn" onclick="handleDecision('${title}', '${date}', ${index}, 'accept', '${turn.user}', event)">Accept</button>
-                        <button class="decline-btn" onclick="handleDecision('${title}', '${date}', ${index}, 'decline', '${turn.user}', event)">Decline</button>
-                      `
-                      : turn.isCompleted
-                        ? `
-                          <button class="revert-btn" onclick="handleRevert('${title}', '${date}', ${index}, '${turn.user}', event)">Revert</button>
-                        `
-                        : `
-                          <select id="replace-select-${index}">
-                            <option value="">Select User</option>
-                            ${allUsers.map(u => `<option value="${u}">${u}</option>`).join('')}
-                          </select>
-                          <button class="replace-btn" onclick="handleReplace('${title}', '${date}', ${index}, '${turn.user}', event)">Replace</button>
-                        `
-                  }
-                </div>
-              `).join('')
-              : '<p>No turns assigned.</p>'
-          }
-        </div>
       `;
 
-      container.appendChild(div);
-      
- // 🛠 Move this INSIDE the loop:
- enableDragAndDrop(div);
+      if (task.settings.includes("Individual")) {
+        // 🐝 Individual mode: show each user progress
+        const required = task.repeat === "Daily" ? task.timesPerDay || 1 :
+                         task.repeat === "Weekly" ? task.timesPerWeek || 1 :
+                         task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
 
+        task.users.forEach(user => {
+          const completions = Array.isArray(task.completions[selectedDate]) ? task.completions[selectedDate].filter(u => u === user).length : 0;
+          contentHTML += `
+            <div class="turn-entry">
+              <p>${user}: ${completions}/${required} ${completions >= required ? '✅' : ''}</p>
+            </div>
+          `;
+        });
+
+      } else {
+        // 🐝 Rotation mode: show turn entries
+        const turns = prepareTaskTurnData(task, selectedDate);
+
+        if (turns.length) {
+          turns.forEach((turn, index) => {
+            contentHTML += `
+              <div class="turn-entry" data-index="${index}" data-user="${turn.user}">
+                <p>Turn ${turn.repetition}: ${turn.user} - ${
+                  turn.isCompleted
+                    ? 'Accepted'
+                    : turn.isPending
+                      ? 'Waiting for Review'
+                      : 'Pending'
+                }</p>
+                ${
+                  turn.isPending && !turn.isCompleted
+                    ? `
+                      <button class="accept-btn" onclick="handleDecision('${title}', '${date}', ${index}, 'accept', '${turn.user}', event)">Accept</button>
+                      <button class="decline-btn" onclick="handleDecision('${title}', '${date}', ${index}, 'decline', '${turn.user}', event)">Decline</button>
+                    `
+                    : turn.isCompleted
+                      ? `
+                        <button class="revert-btn" onclick="handleRevert('${title}', '${date}', ${index}, '${turn.user}', event)">Revert</button>
+                      `
+                      : `
+                        <select id="replace-select-${index}">
+                          <option value="">Select User</option>
+                          ${allUsers.map(u => `<option value="${u}">${u}</option>`).join('')}
+                        </select>
+                        <button class="replace-btn" onclick="handleReplace('${title}', '${date}', ${index}, '${turn.user}', event)">Replace</button>
+                      `
+                }
+              </div>
+            `;
+          });
+        } else {
+          contentHTML += `<p>No turns assigned.</p>`;
+        }
+      }
+
+      contentHTML += `</div>`;
+
+      div.innerHTML = contentHTML;
+
+      container.appendChild(div);
+
+      // ✅ still allow dragging only for Rotation tasks
+      if (!task.settings.includes("Individual")) {
+        enableDragAndDrop(div);
+      }
 
       div.querySelector(".task-title").addEventListener("click", () => {
         const details = div.querySelector(".task-details");
@@ -874,7 +896,6 @@ async function loadTasks() {
         }
       });
     });
-    
 
     if (!container.innerHTML) {
       container.innerHTML = "<p>No tasks for this date.</p>";
@@ -884,6 +905,11 @@ async function loadTasks() {
     document.getElementById("taskContainer").innerHTML = "<p>Error loading tasks. Please try again.</p>";
   }
 }
+
+
+
+
+
 
 
 
