--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -427,7 +427,7 @@ body.menu-open {
   <div class="footer">
     <a href="#" id="homeButton" class="footer-icon active" aria-label="Home">
         <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-        <span>Home 333</span>
+        <span>Home</span>
     </a>
     <a href="#" id="profileButton" class="footer-icon" aria-label="Profile">
         <img src="/BeeMazing-Y1/mobile/1-Home/ProfileBtn.png" alt="Profile" />
@@ -750,7 +750,6 @@ async function handleReorder(title, date, newUserOrder) {
 
 
 
-
 async function loadTasks() {
   try {
     const res = await fetch(`https://beemazing.onrender.com/get-tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, {
@@ -777,11 +776,15 @@ async function loadTasks() {
         startDate,
         settings: task.settings || "Rotation",
         completions: task.completions || {},
+        pendingCompletions: task.pendingCompletions || {},
+        tempTurnReplacement: task.tempTurnReplacement || {}
       };
     });
 
     Object.keys(tasksByTitle).forEach(title => {
       const task = tasksByTitle[title];
+      const rotation = calculateTurn(task, selectedDate);   // ✅ Get Current Turn, Next, Completed
+      const turns = prepareTaskTurnData(task, selectedDate); // ✅ Get full turn list
       const date = task.date;
 
       const div = document.createElement("div");
@@ -792,24 +795,52 @@ async function loadTasks() {
       div.innerHTML = `
         <h3 class="task-title">${title}</h3>
         <div class="task-meta">
-          <p><strong>Repeat Limit:</strong> ${task.repeatLimit || 0} times</p>
+          <p><strong>Current Turn:</strong> ${rotation.currentTurn}</p>
+          <p><strong>Next:</strong> ${rotation.nextUser}</p>
+          <p><strong>Completed:</strong> ${rotation.completedCount}/${rotation.repeatLimit}</p>
         </div>
         <div class="task-details${expandedTasks.has(title) ? ' show' : ''}">
           ${
-            task.users.length
-              ? task.users.map((user, index) => `
-                <div class="turn-entry" data-index="${index}" data-user="${user}">
-                  <p>${user}: ${task.completions?.[selectedDate]?.[user] || 0}/${task.repeatLimit}</p>
+            turns.length
+              ? turns.map((turn, index) => `
+                <div class="turn-entry" data-index="${index}" data-user="${turn.user}">
+                  <p>Turn ${turn.repetition}: ${turn.user} - ${
+                    turn.isCompleted
+                      ? 'Accepted'
+                      : turn.isPending
+                        ? 'Waiting for Review'
+                        : 'Pending'
+                  }</p>
+                  ${
+                    turn.isPending && !turn.isCompleted
+                      ? `
+                        <button class="accept-btn" onclick="handleDecision('${title}', '${date}', ${index}, 'accept', '${turn.user}', event)">Accept</button>
+                        <button class="decline-btn" onclick="handleDecision('${title}', '${date}', ${index}, 'decline', '${turn.user}', event)">Decline</button>
+                      `
+                      : turn.isCompleted
+                        ? `
+                          <button class="revert-btn" onclick="handleRevert('${title}', '${date}', ${index}, '${turn.user}', event)">Revert</button>
+                        `
+                        : `
+                          <select id="replace-select-${index}">
+                            <option value="">Select User</option>
+                            ${allUsers.map(u => `<option value="${u}">${u}</option>`).join('')}
+                          </select>
+                          <button class="replace-btn" onclick="handleReplace('${title}', '${date}', ${index}, '${turn.user}', event)">Replace</button>
+                        `
+                  }
                 </div>
               `).join('')
-              : '<p>No users assigned.</p>'
+              : '<p>No turns assigned.</p>'
           }
         </div>
       `;
 
       container.appendChild(div);
+      
+ // 🛠 Move this INSIDE the loop:
+ enableDragAndDrop(div);
 
-      enableDragAndDrop(div); // 🛠 Enable simple dragging inside each task box
 
       div.querySelector(".task-title").addEventListener("click", () => {
         const details = div.querySelector(".task-details");
@@ -821,6 +852,7 @@ async function loadTasks() {
         }
       });
     });
+    
 
     if (!container.innerHTML) {
       container.innerHTML = "<p>No tasks for this date.</p>";
@@ -830,9 +862,6 @@ async function loadTasks() {
     document.getElementById("taskContainer").innerHTML = "<p>Error loading tasks. Please try again.</p>";
   }
 }
-
-
-
 
 
 
